# synthesus-ultra-

./: .gitignore  AGENTS.md  README.md  SECTION_C101_BUILD_LOG.md  backend.py  conversational_dna.json  final_stress_test.py  package.json  pyproject.toml  requirements.txt  test_user_mode.py  verify_c101.py
.github/: pull_request_template.md
cognitive/: __init__.py
core/: __init__.py
docs/: ACTION_SHARDING.md  AIOS_BLUEPRINT.md  AMPLIFICATION_ORGANISM.md  BRAIN_WIRING.md  FRAMEWORK.md  GEOMETRIC_OPTICS.md  GEOMETRIC_VISION.md  HARMONIC_SYNTAX.md  KNOWLEDGE_INGESTION.md  LARYNX_ACCENTUATION.md  MASTER_DATA_MAP.md  MODULAR_AGENTS.md  MUSICAL_ASSEMBLY.md  PHASE20_PRODUCTION_API.md  REFINEMENT_VS_TRAINING.md  SLLM_VSA_ARCHITECTURE.md  STREAMING_REFINERY.md  SYNTHESUS_ULTRA_SESSION.md  SYNTHETIC_IDENTITY.md  TECHNICAL_DOCUMENTATION.md  ZO_TWIN_SYNC.md  api_schema.json  control_plane_api.md  openapi.json  openapi.yaml
kal/: __init__.py
knowledge_integration/: __init__.py
ml/: __init__.py
ppbrs/: __init__.py
synthesus_framework/: =0.104.0  AGENT_LOG.md  CMakeLists.txt  knowledge_router.py  main.cpp  setup.sh  zo_kernel
synthesus_framework/aios/discovery/: cluster.proto  cluster_engine.py  cluster_pb2.py  cluster_pb2_grpc.py  grpc_client.py  grpc_server.py
synthesus_framework/aios/quadbrain/: conscious_state.py  launcher.py  quadbrain_master.py
synthesus_framework/api/: __init__.py  parameter_cloud_v2.py  schemas.py  security_router.py  security_schemas.py
synthesus_framework/automation/: __init__.py
synthesus_framework/characters/: registry.json
synthesus_framework/characters/claude_sentinel/: bio.json  knowledge.json
synthesus_framework/characters/deepseek_coder/: bio.json
synthesus_framework/characters/gemini_cli/: bio.json  knowledge.json  patterns.json  personality.json
synthesus_framework/characters/gpt4_architect/: bio.json  knowledge.json
synthesus_framework/characters/grok_savage/: bio.json
synthesus_framework/characters/microsoft_copilot/: bio.json
synthesus_framework/characters/mistral_scholar/: bio.json
synthesus_framework/cloud/: drive_backend.py
synthesus_framework/cognitive/: cognitive_engine.py
synthesus_framework/core/: conscious_state.py  context_memory.cpp  conversational_narrator.py  distillation_rag_source.py  emulation_tool.py  hemi_reconciler.cpp  hemi_reconciler.hpp  knowledge_cloud.py  ppbrs_router.cpp  reasoning_tracer.py  security_agent.py  sllm_coordinator.py
synthesus_framework/core/tools/: alert_store.py  security.py
synthesus_framework/docs/: AIVM_NPC_CONTRACT.md  CLOUD_STRATEGY.md  MEMORY_AND_KNOWLEDGE_WIRING_PLAN.md  README.md  drive_setup_guide.md
synthesus_framework/kernel/: __init__.py  mirror_sync_bridge.py  pybind_module.cpp  quantum_simulator_bridge.py
synthesus_framework/kernel/emul_engineering/: emul_engine.cpp  hardware_profiler.cpp  test_emul.cpp
synthesus_framework/kernel/vmm/: kvm_utils.hpp  test_payload.S  virtual_gpu_device.hpp  virtual_mirror_device.cpp  virtual_mirror_device.hpp  virtual_parameter_device.hpp  virtual_quantum_device.hpp  virtual_sllm_device.hpp  virtual_vpu_device.hpp
synthesus_framework/logs/: query_traces.jsonl
synthesus_framework/memory/: __init__.py  episodic_memory.hpp  kn_database.cpp  kn_database.hpp  long_term_memory.hpp  self_perception.cpp  self_perception.hpp
synthesus_framework/modules/: __init__.py
synthesus_framework/onnx_bridge/: hardware_router.cpp
synthesus_framework/reasoning/: __init__.py  bayesian.cpp  bayesian.hpp  causal.hpp  planner.cpp  ppbrs.cpp  ppbrs.hpp  prog_synth.hpp  vehicular_ai.hpp
synthesus_framework/scripts/: auth_gdrive.py  benchmark.py  upload_artifacts.sh
synthesus_framework/static/: security-dashboard.html
synthesus_framework/static/css/: security-dashboard.css
synthesus_framework/static/js/: security-dashboard.js
synthesus_framework/synthetic_core/: __init__.py
synthesus_framework/unpc_engine/: README.md  archetype_loader.py  pattern_generator.py
synthesus_framework/unpc_engine/archetypes/: detective.json  doctor.json  scientist.json  soldier.json  teacher.json  trickster.json
synthesus_framework/vcu/: __init__.py  ct_vcu.cpp  executive_vcu.hpp  language_vcu.hpp  memo_vcu.hpp  motor_vcu.hpp  perception_vcu.cpp  perception_vcu.hpp  vcu_base.hpp  vcu_coordinator.py  vpu_router.cpp
tests/: __init__.py  ab_test_chaining.py  cloudParameters.test.ts  conftest.py  integration_test_2_5.py  quick_integration_test.py  sharedOrgans.test.ts  synthesusCoreChat.integration.test.ts  test_agentic_intent.py  test_amplification_integration.py  test_benchmark_suite.py  test_breach.py  test_bridge.py  test_cgpu_renderer.py  test_chaining_hypothesis.py  test_chal_api_memory_writeback.py  test_chal_hypervisor.py  test_chal_memory_policy.py  test_chal_reasoning_firmware.py  test_character_factory.py  test_character_studio.py  test_cognitive_engine_surface.py  test_constrained_sampler.py  test_cross_character.py  test_dashboard_enhancements.py  test_decoder.py  test_els_bridge_surface.py  test_emergence_multi.py  test_end_to_end_security.py  test_engine_init.py  test_frontend_chal_trace.py  test_generation_spine_integration.py  test_gm_adapter.py  test_intent_classifier.py  test_kal.py  test_kal_e2e.py  test_kernel_bridge.py  test_kernel_pybind_vpd.py  test_kernel_tool.py  test_knowledge_bootstrap_integration.py  (+41 more)
tools/: Dockerfile  Procfile  action_assembler.py  add_allowed_tools.py  add_slots_to_cloud.py  aios_boot_guest.py  aivm_infra_log.md  aivm_live_demo.py  amplifyCli.ts  architecture_report_2026-05-27.md  assess_character_quality.py  audit_template_surfaces.py  benchmark_suite.py  benchmark_universal.py  build.sh  build_grounding.py  cc_logic_streamer.py  chal_conversation_compare.py  character_conversation_test.py  character_harvester.py  color_grounding.py  conductive_assembler.py  cooccurrence_grounding.py  create_startup_shortcut.ps1  demo_reel.py  docker-compose.yml  docs_log.md  download_artifacts.sh  download_models.sh  dual_hemi_log.md  embedding_pipeline.py  enrichment_round2.py  eval_harness.py  (+88 more)
(+78 files in other folders)
